syntax="proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "common.proto";

package booklibrary;

service BookLibraryServiceProto {
    rpc GetBooks (ListBookRequest) returns (ListBooksReply);
    // rpc GetBook (GetBookRequest) returns (Book);
    rpc CreateBook (CreateBookRequest) returns (common.CommonReply);
    // rpc UpdateBook (UpdateBookRequest) returns (CreateBookReply);
    // rpc DeleteBook (DeleteBookRequest) returns (google.protobuf.Empty);
}

message ListBookRequest {
    google.protobuf.StringValue searchKey = 1;
    bool searchExact = 2;
    google.protobuf.Timestamp createdFrom = 3;
    google.protobuf.Timestamp createdTo = 4;
    int32 skip = 5;
    int32 limit = 6;
}

message ListBooksReply {
    repeated Book data = 1;
    int32 total = 2;
}

message Book {
    string id = 1;
    google.protobuf.StringValue title = 2;
    google.protobuf.StringValue author = 3;
    google.protobuf.StringValue category = 4;
    float price = 5;
    google.protobuf.StringValue description = 6;
    google.protobuf.Timestamp createdDate = 7;
    google.protobuf.Timestamp modifiedDate = 8;
    google.protobuf.StringValue createdBy = 9;
    google.protobuf.StringValue modifiedBy = 10;
    google.protobuf.StringValue summary = 11;
}

message CreateBookRequest {
    google.protobuf.StringValue title = 1;
    google.protobuf.StringValue author = 2;
    google.protobuf.StringValue category = 3;
    float price = 4;
    google.protobuf.StringValue description = 5;
    google.protobuf.StringValue summary = 6;
}